--- a/GameBoyPngConverter/GameBoyPngConverter.csproj
+++ b/GameBoyPngConverter/GameBoyPngConverter.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RuntimeIdentifiers>win-x64;win-x86;linux-x64;osx-x64;</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
