setting debug file back to original one

--- a/GameBoyPngConverter/Properties/launchSettings.json
+++ b/GameBoyPngConverter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GameBoyPngConverter": {
       "commandName": "Project",
-      "commandLineArgs": "\"retrodx-switch.jpg\""
+      "commandLineArgs": "\"pixel art splashscreen.png\""
     }
   }
 }
