--- a/GameBoyPngConverter/GameBoyPngConverter.csproj
+++ b/GameBoyPngConverter/GameBoyPngConverter.csproj
@@ -4,9 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RuntimeIdentifiers>win-x64;win-x86;linux-x64;osx-x64;</RuntimeIdentifiers>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion></FileVersion>
-    <Version>$(VersionPrefix)</Version>
+    <Version>$(VersionPrefix)2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
