--- a/GameBoyPngConverter/GameBoyPngConverter.csproj
+++ b/GameBoyPngConverter/GameBoyPngConverter.csproj
@@ -3,10 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <PublishReadyToRun>true</PublishReadyToRun>
     <RuntimeIdentifiers>win-x64;win-x86;linux-x64;osx-x64;</RuntimeIdentifiers>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion></FileVersion>
     <Version>$(VersionPrefix)2.0.0</Version>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
